# gtk-themes

./: CMakeLists.txt  README.md
Cutefish/: index.theme
Cutefish-dark/: index.theme
debian/: changelog  control  copyright  install
